--- a/tmpl/view.gohtml
+++ b/tmpl/view.gohtml
@@ -1,5 +1,8 @@
 <h1>{{.Title}}</h1>
 
-<p>[<a href="/edit/{{.Title}}">edit</a>]</p>
+<p>
+[<a href="/edit/{{.Title}}">edit</a>]
+[<a href="/">home</a>]
+</p>
 
 <div>{{printf "%s" .Body}}</div>
